# My-Portfolio

./: README.md
Academic projects/234124 - Introduction to Systems Programming/Events manager/: CMakeLists.txt
Academic projects/234124 - Introduction to Systems Programming/Events manager/partA/: date.c  date.h  date_wrap.cpp  date_wrap.h
Academic projects/234124 - Introduction to Systems Programming/Events manager/partB/: base_event.cpp  base_event.h  closed_event.cpp  custom_event.h  event_container.cpp  event_container.h  one_time_event.h  open_event.cpp  open_event.h  recurring_event.h  student.cpp  student.h
Personal Projects/: BaseInventory.py  Bucket.py  GroceryList.py  Inventory.py  Item.py  ItemsDict.py  Kitchen.py  README.md  Singleton.py  commands.py  conversations.py  exceptions.py  main.py  parser.py  responses.py  settings.py
Personal Projects/AI - Hamumletzet/: A_star_alg.py  Course.py  CoursesGraph.py  CoursesTest.py  Data.py  GraduateParser.py  HtmlDownloader.py  JsonParser.py  README.md  ResultsAnalysis.py  State.py  Student.py  SupporterGraduateParser.py  TimeTableClasess.py
Personal Projects/Bot - KitchenManager/: BaseInventory.py  Bucket.py  GroceryList.py  Inventory.py  Item.py  ItemsDict.py  Kitchen.py  README.md  Singleton.py  commands.py  conversations.py  exceptions.py  main.py  parser.py  responses.py  settings.py
Personal projects/AI - Hamumletzet/: Astar.py  CatalogParser.py  Create_students.py  GradeSheetParser.py  OptionsGraph.py  TestCourseGraph.py  main.py  settings.py
(+309 files in other folders)
